SERVER-15055 RocksDB storage engine: fix several unit tests

Several changes:
    (1) return nrecords when validating a RocksRecordStore
    (2) implement RocksRecordStore::Iterator::restoreState(), which reseek to the last seek location
    (3) RocksSortedDataImpl::dupKeyCheck() return false when no exact key is found

    This change would fix several tests, including:
    jstests/core/apitest_db.js
    jstests/core/auth*.js
    jstests/core/batch_write_command_insert.js

Closes #758

Signed-off-by: Benety Goh <benety@mongodb.com>